--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,7 +17,7 @@
             android:id="@+id/navHostFragment"
             android:name="androidx.navigation.fragment.NavHostFragment"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
+            android:layout_height="match_parent"
             app:defaultNavHost="true"
             app:layout_constraintBottom_toTopOf="@id/bnvAppBottomNav"
             app:layout_constraintEnd_toEndOf="parent"
@@ -29,9 +29,10 @@
             android:id="@+id/bnvAppBottomNav"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:background="@color/white"
+            android:background="@drawable/bg_bottam_nv"
             app:itemIconTint="@color/icon_tint"
             app:labelVisibilityMode="labeled"
+            app:elevation="16dp"
             app:itemTextColor="@color/main_color"
             app:itemTextAppearanceActive="@color/main_color"
             app:itemTextAppearanceInactive="@android:color/transparent"
