--- a/app/src/main/res/drawable/background.xml
+++ b/app/src/main/res/drawable/background.xml
@@ -2,6 +2,10 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
     <solid android:color="#01095e"/>
-    <corners android:topLeftRadius="0dp" android:topRightRadius="0dp"
-        android:bottomLeftRadius="50dp" android:bottomRightRadius="50dp"/>
+    <corners
+        android:topLeftRadius="0dp"
+        android:topRightRadius="0dp"
+        android:bottomLeftRadius="32dp"
+        android:bottomRightRadius="32dp"/>
+
 </shape>
