--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/main_color"
+    android:background="@color/white"
     tools:context=".SplashScreen">
 
     <TextView
@@ -18,7 +18,7 @@
         android:textAlignment="center"
         android:textStyle="bold"
         android:textSize="24sp"
-        android:textColor="@color/white"
+        android:textColor="@color/main_color"
         android:text="@string/splash_text"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
